--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -287,6 +287,25 @@ main .btn {
   padding: 0.5rem 1.6rem;
 }
 
+main .action-btn{
+  background-color: #2c3e50;
+  border-color: #2c3e50;
+  color: white;
+  border: 1px solid transparent;
+  border-radius: .25em;
+  display: inline-block;
+  font-size: 1em;
+  font-weight: 400;
+  line-height: 1.5;
+  padding: .4em .65em;
+  text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
 .action-container {
   white-space: nowrap;
   /* width: 150px; */
