--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -430,30 +430,38 @@ main .recent-orders h2 {
   margin-bottom: 0.8rem;
 }
 
-main .recent-orders table {
+table {
   background: var(--color-white);
   width: 100%;
-  border-radius: var(--card-border-radius);
+  border-radius: var(--border-radius-2);
   padding: var(--card-padding);
   text-align: left;
   font-size: 1rem;
   box-shadow: var(--box-shadow);
   transition: all 300ms ease;
+  border-collapse: collapse;
+  width: 100%;
 }
 
-main .recent-orders table:hover {
-  box-shadow: none;
-}
-
-main table thead th {
-  text-align: center;
-}
-
-main table tbody td {
+table th,
+table td {
   height: 2.8rem;
   border-bottom: 1px solid var(--color-light);
   color: var(--color-dark-variant);
-  text-align: center;
+  text-align: left;
+  padding: 8px;
+}
+
+table td.actions {
+  text-align: right;
+}
+
+table td.actions .material-icons {
+  margin-right: 4px;
+}
+
+table:hover {
+  box-shadow: none;
 }
 
 main table tbody td small {
@@ -946,6 +954,7 @@ canvas#chart {
   text-align: justify;
   font-size: 1.5rem;
 }
+
 .form-group {
   display: block;
   width: 100%;
@@ -956,4 +965,148 @@ canvas#chart {
   background: var(--color-white);
   margin-top: 1rem;
   font-size: 1rem;
+}
+
+.card {
+  background: var(--color-white);
+  padding: var(--card-padding);
+  border-radius: var(--border-radius-2);
+  box-shadow: var(--box-shadow);
+  transition: all 300ms ease;
+}
+
+.card:hover {
+  box-shadow: none;
+}
+
+.card-header {
+  /* Estilos para o cabeçalho do card */
+}
+
+.card-body {
+  /* Estilos para o corpo do card */
+}
+
+.card-footer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.card-footer div {
+  margin-left: auto;
+}
+
+.form-cad-group {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  outline: none;
+  margin-top: 1rem;
+  font-size: 1rem;
+}
+
+.form-cad-group label {
+  font-weight: bold;
+}
+
+.form-cad-group select,
+.form-cad-group input {
+  padding: 0.8rem;
+  margin-top: 0.5rem;
+  background: var(--color-background);
+  border: none;
+  border-radius: var(--border-radius-2);
+}
+
+.card-footer .btn {
+  cursor: pointer;
+  transition: all 300ms ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  /* Adicione a sombra desejada aqui */
+}
+
+.card-footer .btn:hover {
+  opacity: 0.8;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+/* Estilos personalizados para o formulário de cadastro */
+.container-signin {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 28rem;
+}
+
+.container-signin .brand {
+  text-align: center;
+}
+
+.container-signin .brand .logo {
+  height: 4rem;
+  width: 100%;
+  margin-bottom: 0.8rem;
+}
+
+.container-signin h1 {
+  font-size: 2.5rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.signin,
+.signup {
+  color: var(--color-dark);
+  position: relative;
+  top: 0;
+  left: 0;
+  background: var(--color-white);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  padding: 3rem 2rem;
+  border-radius: var(--border-radius-3);
+  backdrop-filter: blur(30px);
+  animation: animateForm 1s ease forwards;
+}
+
+.container-signin form input {
+  display: block;
+  width: 100%;
+  border: 0.0625rem solid #d1d5db;
+  border-radius: var(--border-radius-2);
+  outline: none;
+  padding: 1.2rem;
+  background: var(--color-background);
+  /* Alterado para background padrão */
+  margin-top: 1rem;
+  font-size: 1rem;
+}
+
+.container-signin form input::placeholder {
+  color: var(--color-info-dark);
+}
+
+.container-signin form input[type="submit"] {
+  cursor: pointer;
+  color: var(--color-white);
+  border: none;
+  background: var(--color-primary);
+  /* Alterado para cor primária */
+  height: 4rem;
+}
+
+.container-signin form input[type="submit"]:hover {
+  background: var(--color-primary-variant);
+  /* Alterado para variante da cor primária */
+}
+
+.container-signin form small {
+  display: block;
+  margin-top: 1rem;
+  opacity: 0.65;
+}
+
+.container-signin form small label {
+  color: var(--color-primary);
+  cursor: pointer;
 }
